--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,16 @@
 @import url('http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic|Montserrat:700|Merriweather:400italic');
 
+.logOut {
+    height: 10px;
+    width: 20px;
+    <!--visibility: hidden;-->
+    position: absolute;
+    padding: 0;
+    margin 0;
+    z-index: 99;
+
+    
+}
 
 body {
     width: 100%;
